# ffmpegJenkins

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/javac/ffmpegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/javac/ffmpegdemo/: MainActivity.java
app/src/test/java/com/example/javac/ffmpegdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
